# polish_markets_monitor

./: README.MD  README.md  docker-compose.yml  env.example  pyproject.toml
services/api/: Dockerfile  pyproject.toml
services/api/src/api/: main.py
services/dagster/: Dockerfile  dagster.yaml  pyproject.toml
services/dagster/src/stock_dagster/: __init__.py  config.py  utils.py
services/dagster/src/stock_dagster/defs/: jobs.py  resources.py  schedules.py
services/dagster/src/stock_dagster/defs/assets/: gpw.py  llm_summary.py  nbp.py  news.py
services/dashboard/: Dockerfile  pyproject.toml
services/dashboard/src/dashboard/: app.py
services/dashboard/src/dashboard/components/: button_load_more.py  news_list.py
services/dashboard/src/dashboard/tabs/: companies.py  currencies.py  news.py  overview.py
services/dashboard/src/dashboard/utils/: data_loader.py  date.py  plotting.py
