[project]
name = "polish_markets_monitor"
version = "0.1.0"
#readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "polars>=1.34.0",
]

[tool.uv.workspace]
members = [
    "packages/data_access",
    "packages/data_sources",
    "packages/analytics",
    "services/api",
    "services/dashboard",
    "services/dagster"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
]
