[project]
name = "dashboard"
requires-python = ">=3.11"
version = "0.1"

dependencies = [
    "data-access",
    "analytics",
    "plotly>=6.3.1",
    "streamlit>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
data-access = { workspace = true }
analytics = {workspace = true}

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

